<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/profile_user__2_" />

    <item
        android:id="@+id/nav_my_rides"
        android:title="@string/my_rides"
        android:icon="@drawable/my_ride_icon" />

    <item
        android:id="@+id/nav_save_locations"
        android:title="@string/save_locations"
        android:icon="@drawable/location_symbol_yellow" />

    <item
        android:id="@+id/termAndCondition"
        android:title="@string/terms_and_condition"
        android:icon="@drawable/term_and_condition_icon" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/setting_vector_icon" />

    <item
        android:id="@+id/nav_logout"
        android:title="@string/logout"
        android:icon="@drawable/logout_icon" />
</menu>
