<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F8EBEB">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Back Button and Profile Title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp"
            tools:ignore="UseCompoundDrawables">


            <ImageView
                android:id="@+id/backButton"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/backwardarrowicon"
                android:contentDescription="@string/back_button"
                android:layout_marginEnd="16dp" />


            <TextView
                android:id="@+id/profileTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000" />
        </LinearLayout>

        <!-- Profile Card -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="44dp"
            android:background="@drawable/backgroudgradient"
            android:elevation="5dp"
            android:padding="16dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/profile_user_icon"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="@drawable/circle_background"
                android:padding="8dp"/>

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/WhiteColor" />
        </LinearLayout>

        <!-- Details Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/profile_info_backgroud"
            android:padding="16dp"
            android:layout_marginTop="16dp"
            android:elevation="4dp">

            <!-- Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/profile_user_icon"
                    android:contentDescription="@string/name_icon"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:id="@+id/userNameDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Birthday -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/dob"
                    android:layout_marginEnd="12dp"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/userBirthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/dob"
                    android:textSize="16sp"
                    android:textColor="#000000" />
            </LinearLayout>

            <!-- Phone -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/phone"
                    android:contentDescription="@string/phone_icon"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:id="@+id/userPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile_number"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- Email -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/mail"
                    android:contentDescription="@string/email_icon"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:id="@+id/userEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:textSize="16sp"
                    android:textColor="@color/black" />
            </LinearLayout>

            <!-- City -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/home"
                    android:contentDescription="@string/city_icon"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:id="@+id/city"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:textSize="16sp"
                    android:contentDescription="@string/city"
                    android:textColor="@color/BlackColor"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
            <!-- Pincode -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp"
                android:gravity="center_vertical"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/pin_code"
                    android:contentDescription="@string/city_icon"
                    android:layout_marginEnd="12dp" />

                <TextView
                    android:id="@+id/pin_code_field"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/pinCode"
                    android:textSize="16sp"
                    android:contentDescription="@string/pinCode"
                    android:textColor="@color/BlackColor"
                    tools:ignore="ContentDescription" />
            </LinearLayout>
        </LinearLayout>

        <!-- Edit Profile Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/editProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:background="@drawable/backgroudgradient"
            android:textColor="@color/WhiteColor"
            android:layout_marginTop="24dp"
            android:paddingVertical="12dp"
            android:elevation="5dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/deleteProfileButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Delete Your Account"
            android:background="@drawable/deletebuttonbackgroud"
            android:textColor="@color/WhiteColor"
            android:layout_marginTop="24dp"
            android:paddingVertical="12dp"
            android:elevation="5dp" />
    </LinearLayout>
</ScrollView>
