<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="100dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_profile"
            android:textColor="#ED8F03"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:textSize="30sp" />

        <!-- Name -->
        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <!-- Date of Birth -->
        <EditText
            android:id="@+id/editDob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_of_birth_yyyy_mm_dd"
            android:focusable="false"
            android:clickable="true" />

        <!-- Phone -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_91"
                android:textSize="18sp"
                android:gravity="center"
                android:padding="8dp" />

            <EditText
                android:id="@+id/editPhone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLength="10"
                android:layout_weight="1"
                android:hint="Phone"
                android:inputType="phone" />
        </LinearLayout>

        <!-- Email -->
        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email"
            android:inputType="textEmailAddress" />

        <!-- Street Address 1 -->
        <EditText
            android:id="@+id/editStreet1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address"
            android:inputType="text" />

        <!-- Pin Code -->
        <EditText
            android:id="@+id/editPinCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Pin Code"
            android:inputType="number" />

        <!-- Save Button -->
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/backgroudgradient"
            android:text="Save" />

    </LinearLayout>
</ScrollView>
